# terraform-heroku-oteldemostack-backstage

./: README.md  catalog-info.yaml  main.tf  provider.tf  pyproject.toml  variables.tf
